# ZkInheritance

./: .gitignore  Documentation.md  README.md  package-lock.json  package.json  todo.txt
artifacts/contracts/Lock.sol/: Lock.dbg.json
artifacts/contracts/testament.sol/: Testament.dbg.json  Testament.json
backend/: package-lock.json  package.json  server.ts  tsconfig.json
cache/: solidity-files-cache.json
circuit/: challenge_phase2_0003  circuit_0000.zkey  circuit_0001.zkey  circuit_0002.zkey  circuit_0003.zkey  circuit_final.zkey  hashers.circom  input.json  main.circom  main.r1cs  main.sym  main_0000.zkey  main_0001.zkey  main_c.r1cs  main_c.r1cs.json  main_c.sym  merkleTree.circom  pot12_0001.ptau  proof.json  proof.zkey  proof_zkv.json  public.json  public_zkv.json  response_0003  response_phase2_0003  verification_key.json  verification_key_zkv.json  witness.wtns
circuit/main_c_js/: input.json  main_c.wasm
contracts/: Cargo.toml  testament.sol  verifier.sol
contracts/rust/: Cargo.toml
contracts/rust/src/: lib.rs
contracts/src/: lib.rs  tests.rs  types.rs  utils.rs  zk_verify.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte
frontend/src/components/: CreateTestament.svelte  Lawyer.svelte  ReadTestament.svelte  WalletConnectButton.svelte  WalletStatus.svelte
frontend/src/config/: constants.ts  stores.ts
frontend/src/lib/: appkit.ts
frontend/src/stores/: wallet.ts  walletStore.ts
src/circuit/: merkleTree.circom  nullifier.circom  privToPub.circom
test/: testament.test.js
