[package]
name = "testament"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
scale-info = { version = "2", default-features = false }

[dev-dependencies]
stylus-test = "0.8.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
